--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,9 @@ test {
 tasks.withType(JavaCompile).configureEach {
     options.encoding = "UTF-8"
 }
+
+tasks.configureEach {
+    if (it.name != "clean") {
+        dependsOn "clean"
+    }
+}
