update group and version

--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'java'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'darvil'
+version 'INDEV'
 
 repositories {
     mavenCentral()
