--- a/.editorconfig
+++ b/.editorconfig
@@ -134,10 +134,10 @@ ij_java_keep_first_column_comment = true
 ij_java_keep_indents_on_empty_lines = false
 ij_java_keep_line_breaks = true
 ij_java_keep_multiple_expressions_in_one_line = false
-ij_java_keep_simple_blocks_in_one_line = false
-ij_java_keep_simple_classes_in_one_line = false
-ij_java_keep_simple_lambdas_in_one_line = false
-ij_java_keep_simple_methods_in_one_line = false
+ij_java_keep_simple_blocks_in_one_line = true
+ij_java_keep_simple_classes_in_one_line = true
+ij_java_keep_simple_lambdas_in_one_line = true
+ij_java_keep_simple_methods_in_one_line = true
 ij_java_label_indent_absolute = false
 ij_java_label_indent_size = 0
 ij_java_lambda_brace_style = next_line_if_wrapped
@@ -332,3 +332,7 @@ ij_properties_align_group_field_declarations = false
 ij_properties_keep_blank_lines = false
 ij_properties_key_value_delimiter = equals
 ij_properties_spaces_around_key_value_delimiter = false
+
+[*.yml]
+indent_style = space
+indent_size = 2
