refactor: collection getters now use inmutable lists when possible

--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+
+	filter {
+		includeTestsMatching("Test*")
+	}
 }
 
 tasks.withType(JavaCompile).configureEach {
