--- a/.editorconfig
+++ b/.editorconfig
@@ -47,7 +47,7 @@ ij_java_array_initializer_wrap = off
 ij_java_assert_statement_colon_on_next_line = false
 ij_java_assert_statement_wrap = off
 ij_java_assignment_wrap = off
-ij_java_binary_operation_sign_on_next_line = false
+ij_java_binary_operation_sign_on_next_line = true
 ij_java_binary_operation_wrap = off
 ij_java_blank_lines_after_anonymous_class_header = 0
 ij_java_blank_lines_after_class_header = 0
@@ -120,7 +120,7 @@ ij_java_for_statement_wrap = off
 ij_java_generate_final_locals = false
 ij_java_generate_final_parameters = false
 ij_java_if_brace_force = never
-ij_java_imports_layout = *, |, javax.**, java.**, |, $*
+ij_java_imports_layout = *,|,javax.**,java.**,|,$*
 ij_java_indent_case_from_switch = true
 ij_java_insert_inner_class_imports = false
 ij_java_insert_override_annotation = true
@@ -159,7 +159,7 @@ ij_java_names_count_to_use_import_on_demand = 3
 ij_java_new_line_after_lparen_in_annotation = false
 ij_java_new_line_after_lparen_in_deconstruction_pattern = true
 ij_java_new_line_after_lparen_in_record_header = false
-ij_java_packages_to_use_import_on_demand = java.awt.*, javax.swing.*
+ij_java_packages_to_use_import_on_demand = java.awt.*,javax.swing.*
 ij_java_parameter_annotation_wrap = off
 ij_java_parentheses_expression_new_line_after_left_paren = false
 ij_java_parentheses_expression_right_paren_on_new_line = false
