added more comments and renamed ErrorConfig

--- a/.editorconfig
+++ b/.editorconfig
@@ -90,7 +90,7 @@ ij_java_doc_align_param_comments = false
 ij_java_doc_do_not_wrap_if_one_line = true
 ij_java_doc_enable_formatting = true
 ij_java_doc_enable_leading_asterisks = true
-ij_java_doc_indent_on_continuation = false
+ij_java_doc_indent_on_continuation = true
 ij_java_doc_keep_empty_lines = true
 ij_java_doc_keep_empty_parameter_tag = true
 ij_java_doc_keep_empty_return_tag = true
@@ -277,7 +277,7 @@ ij_java_variable_annotation_wrap = off
 ij_java_visibility = public
 ij_java_while_brace_force = never
 ij_java_while_on_new_line = false
-ij_java_wrap_comments = false
+ij_java_wrap_comments = true
 ij_java_wrap_first_method_in_call_chain = false
 ij_java_wrap_long_lines = false
 
