--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -5,12 +5,12 @@
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Jar
+name: Publish to Github Packages
 
 on:
-  workflow_dispatch
-#  release:
-#    types: [created]
+  workflow_dispatch:
+  release:
+    types: [created]
 
 permissions:
   contents: read
