--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -30,9 +30,12 @@ jobs:
           distribution: 'temurin'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-      - name: Publish package
+      - name: publish
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CI_GITHUB: 'x'
+          CI_GITHUB_BRANCH: ${{ github.ref_name }}
+          CI_GITHUB_USERNAME: ${{ github.actor }}
+          CI_GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
