javadoc pages test changes

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -16,5 +16,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           javadoc-branch: javadoc
           java-version: 17
-          target-folder: docs
           project: gradle
+          custom-command: javadoc -d javadoc -sourcepath src/main/java -subpackages . -stylesheetfile javadoc.css
