--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -3,22 +3,18 @@ name: Publish Package
 on:
   workflow_dispatch:
   release:
-    types: [ created ]
+    types: [created]
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  publish:
-    env:
-      CI_GITHUB: 'x'
-      CI_GITHUB_BRANCH: ${{ github.ref_name }}
-
+  publish_to_maven_central:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -29,17 +25,38 @@ jobs:
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
 
-      - name: publish to Maven Central
+      - name: Import GPG Key
+        run: |
+          echo "$GPG_PRIVATE_KEY" | gpg --import
+        env:
+          GPG_PRIVATE_KEY: ${{ secrets.GPG_KEYRING_FILE }}
+
+      - name: Publish to Maven Central
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          GPG_KEY_ID: ${{ secrets.GPG_KEY_ID }}
         run: |
           ./gradlew publish
+        continue-on-error: false
 
-      - name: publish to Github Packages
+  publish_to_github_packages:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Publish to GitHub Packages
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         env:
           CI_GITHUB_USERNAME: ${{ github.actor }}
           CI_GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         with:
           arguments: publish
+        continue-on-error: false
