fix: gpg returning 2, cancelling the workflow

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Import GPG Key
         run: |
-          echo "$GPG_PRIVATE_KEY" | gpg --import
+          echo "$GPG_PRIVATE_KEY" | gpg --import || true
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_KEYRING_FILE }}
 
