--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -31,6 +31,10 @@ jobs:
         run: |
           echo "$GPG_PRIVATE_KEY" | gpg --import || true
 
+      - name: check GPG key
+        run: |
+          gpg --list-keys
+
       - name: Publish to Maven Central
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
