--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -35,9 +35,13 @@ jobs:
         run: |
           echo "ossrhUsername=${OSSRH_USERNAME}" >> $GITHUB_ENV
           echo "ossrhPassword=${OSSRH_PASSWORD}" >> $GITHUB_ENV
+          echo "ciGithubUsername=${GITHUB_ACTOR}" >> $GITHUB_ENV
+          echo "ciGithubPassword=${GITHUB_TOKEN}" >> $GITHUB_ENV
         env:
           OSSRH_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           OSSRH_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
+          CI_GITHUB_USERNAME: ${{ github.actor }}
+          CI_GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Publish to Maven Central
         env:
@@ -46,23 +50,11 @@ jobs:
           ./gradlew publish
         continue-on-error: false
 
-  publish_to_github_packages:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      - name: Publish to GitHub Packages
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        env:
-          CI_GITHUB_USERNAME: ${{ github.actor }}
-          CI_GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          arguments: publish
-        continue-on-error: false
+#      - name: Publish to GitHub Packages
+#        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+#        env:
+#          CI_GITHUB_USERNAME: ${{ github.actor }}
+#          CI_GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          arguments: publish
+#        continue-on-error: false
