fix: javadocs being generated on commit to main instead of on release

--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -2,9 +2,8 @@ name: Deploy Javadoc
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  release:
+    types: [ created ]
 
 permissions:
   contents: write
