--- a/.github/workflows/gradle-ci-javadoc-jar.yml
+++ b/.github/workflows/gradle-ci-javadoc-jar.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Build with Gradle
         uses: gradle/actions/setup-gradle@v3
         with:
-          arguments: javadocJar
+          arguments: javadoc
